# graphkb

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
graphkb/: __init__.py
graphkb/api/: main.py  routes.py
graphkb/core/: graph.py  models.py  queries.py
graphkb/persistence/: __init__.py  json_store.py
graphkb/utils/: helpers.py
graphkb/visualization/: renderer.py
scripts/: cli.py
tests/: test_api.py  test_core.py  test_persistence.py  test_visualization.py
