[project]
name = "graphkb"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohamed Rhoulam",email = "rhoulamed@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx (>=3.4.2,<4.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "redis (>=5.2.1,<6.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
matplotlib = "^3.10.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
